// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarouselRenderer snapshot (T-0009-106) — expressive×health matches snapshot at expressive×health 1`] = `
<View
  accessibilityLabel="Carousel, item 1 of 3"
  accessibilityRole="adjustable"
  testID="carousel-container"
>
  <View
    testID="flashlist"
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 20,
            "justifyContent": "center",
            "minHeight": 160,
            "padding": 20,
            "width": 675,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            {
              "color": "#1A1715",
              "fontSize": 22,
              "fontWeight": "600",
              "lineHeight": 30,
              "textAlign": "center",
            }
          }
        >
          Slide 1
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 20,
            "justifyContent": "center",
            "minHeight": 160,
            "padding": 20,
            "width": 675,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            {
              "color": "#1A1715",
              "fontSize": 22,
              "fontWeight": "600",
              "lineHeight": 30,
              "textAlign": "center",
            }
          }
        >
          Slide 2
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 20,
            "justifyContent": "center",
            "minHeight": 160,
            "padding": 20,
            "width": 675,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            {
              "color": "#1A1715",
              "fontSize": 22,
              "fontWeight": "600",
              "lineHeight": 30,
              "textAlign": "center",
            }
          }
        >
          Slide 3
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 4,
        "justifyContent": "center",
        "marginTop": 8,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#4A7438",
          "borderRadius": 3,
          "height": 6,
          "width": 6,
        }
      }
    />
    <View
      style={
        {
          "backgroundColor": "#EFE9DF",
          "borderRadius": 3,
          "height": 6,
          "width": 6,
        }
      }
    />
    <View
      style={
        {
          "backgroundColor": "#EFE9DF",
          "borderRadius": 3,
          "height": 6,
          "width": 6,
        }
      }
    />
  </View>
</View>
`;

exports[`CarouselRenderer snapshot (T-0009-106) — productive×focus matches snapshot at productive×focus (collectionId) 1`] = `
<View
  accessibilityLabel="Carousel, item 1 of 3"
  accessibilityRole="adjustable"
  testID="carousel-container"
>
  <View
    testID="flashlist"
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 20,
            "justifyContent": "center",
            "minHeight": 160,
            "padding": 20,
            "width": 675,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            {
              "color": "#14171A",
              "fontSize": 18,
              "fontWeight": "600",
              "lineHeight": 24,
              "textAlign": "center",
            }
          }
        >
          Slide 1
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 20,
            "justifyContent": "center",
            "minHeight": 160,
            "padding": 20,
            "width": 675,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            {
              "color": "#14171A",
              "fontSize": 18,
              "fontWeight": "600",
              "lineHeight": 24,
              "textAlign": "center",
            }
          }
        >
          Slide 2
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 20,
            "justifyContent": "center",
            "minHeight": 160,
            "padding": 20,
            "width": 675,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            {
              "color": "#14171A",
              "fontSize": 18,
              "fontWeight": "600",
              "lineHeight": 24,
              "textAlign": "center",
            }
          }
        >
          Slide 3
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 4,
        "justifyContent": "center",
        "marginTop": 8,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#4F46E5",
          "borderRadius": 3,
          "height": 6,
          "width": 6,
        }
      }
    />
    <View
      style={
        {
          "backgroundColor": "#ECEEF1",
          "borderRadius": 3,
          "height": 6,
          "width": 6,
        }
      }
    />
    <View
      style={
        {
          "backgroundColor": "#ECEEF1",
          "borderRadius": 3,
          "height": 6,
          "width": 6,
        }
      }
    />
  </View>
</View>
`;
